--- a/MiPaginaWeb(Proyecto)/RedesSociales.css
+++ b/MiPaginaWeb(Proyecto)/RedesSociales.css
@@ -70,7 +70,7 @@
 .flex-item4 {
   background: #E8E8B4 ;
   padding: 5px;
-  /*width: 200px;*/
+  width: 100%;
   height: 100%;
   margin-top: 10px;
   line-height: 150px;
