--- a/MiPaginaWeb(Proyecto)/RedesSociales.css
+++ b/MiPaginaWeb(Proyecto)/RedesSociales.css
@@ -70,7 +70,7 @@
 .flex-item4 {
   background: #E8E8B4 ;
   padding: 5px;
-  width: 100%;
+  /*width: 100%;*/
   height: 100%;
   margin-top: 10px;
   line-height: 150px;
@@ -80,6 +80,12 @@
   text-align: center;
   flex-grow: 4;
   border: 1px solid black;
+}
+/*MODIFICAR MAPA PARA QUE QUEDE BIEN AL ENCOJER*/
+div iframe{
+    width: 90%;
+    height: 400px;
+
 }
 
 /*DE AQUI EN ADELANTE VA LA CONFIG DEL MENU DE OPCIONES DE ARRIBA ES LO MISMO QUE EL CSS DE LA PÁGINA PRINCIPAL*/
