--- a/MiPaginaWeb(Proyecto)/CV.css
+++ b/MiPaginaWeb(Proyecto)/CV.css
@@ -88,8 +88,8 @@ div h1 {
 /*pie de pagina */
 #footer {
       background-color: #292C44;
-      position: absolute;
-      /*display: inline-block;*/
+      position: static;
+      display: inline-block;
       bottom: 0;
       width: 100%;
       height: 40px;
