--- a/MiPaginaWeb(Proyecto)/Miestilo.css
+++ b/MiPaginaWeb(Proyecto)/Miestilo.css
@@ -98,6 +98,85 @@ section.Contenido {
 
 
 
+/*SLIDER*/
+body{
+  background-color: deepskyblue;
+  font-family: sans-serif;
+}
+
+.container{
+  margin: auto;
+  background-color: #F37E7E;
+  width: 800px;
+  padding: 30px;
+}
+
+ul, li {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+ul.slider{
+  position: relative;
+  width: 800px;
+  height: 300px;
+}
+
+/*IMAGEN 3*/
+ul.slider li {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    opacity: 0;
+    width: inherit;
+    height: inherit;
+    transition: opacity .5s;
+    background: red;
+}
+
+ul.slider li img{
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+ul.slider li:first-child {
+    opacity: 1; /*Mostramos el primer <li>*/
+}
+
+ul.slider li:target {
+    opacity: 1; /*Mostramos el <li> del enlace que pulsemos*/
+}
+
+.menu{
+  text-align: center;
+  margin: 20px;
+}
+
+.menu li{
+  display: inline-block;
+  text-align: center;
+}
+
+/*BOTONES 1,2 y 3 CONF*/
+.menu li a{
+  display: inline-block;
+  color: white;
+  text-decoration: none;
+  background-color: skyblue;
+  padding: 10px;
+  width: 20px;
+  height: 20px;
+  font-size: 20px;
+  border-radius: 100%;
+}
+
+
+
+
+
+
 
 
 
