--- a/MiPaginaWeb(Proyecto)/Miestilo.css
+++ b/MiPaginaWeb(Proyecto)/Miestilo.css
@@ -92,7 +92,9 @@ section.Contenido {
       color: white;
     }   
 
-
+section {
+    text-align: center;
+}
 
 
 
@@ -115,6 +117,7 @@ ul, li {
     padding: 0;
     margin: 0;
     list-style: none;
+    animation: cambio 1s infinite alternate linear;
 }
 
 ul.slider{
@@ -131,7 +134,7 @@ ul.slider li {
     opacity: 0;
     width: inherit;
     height: inherit;
-    transition: opacity .5s;
+    transition: opacity .2s;
     background: red;
 }
 
