--- a/MiPaginaWeb(Proyecto)/Misaficiones.css
+++ b/MiPaginaWeb(Proyecto)/Misaficiones.css
@@ -107,10 +107,22 @@ section.Contenido {
 }
 
 .primero {
+ border-top: 2px solid #FA9400;
+  border-bottom: 2px solid #F70404;
+    align-items: center;
+}
+.segundo {
  border-top: 2px solid #369;
   border-bottom: 2px solid #369;
     align-items: center;
 }
-.video1 {
- 
+.tercero {
+ border-top: 2px solid #369;
+  border-bottom: 2px solid #369;
+    align-items: center;
+}
+.cuarto {
+ border-top: 2px solid #369;
+  border-bottom: 2px solid #369;
+    align-items: center;
 }
