--- a/MiPaginaWeb(Proyecto)/CV.css
+++ b/MiPaginaWeb(Proyecto)/CV.css
@@ -96,6 +96,16 @@ div h1 {
       color: white;
     }     
 
+/Moviles/
+@media (min-width:320px)  {  }
+@media (min-width:481px)  {  }
+/Tablets/
+@media (min-width:641px)  {  }
+@media (min-width:961px)  {  }
+/Ordenadores/
+@media (min-width:1025px) {  }
+@media (min-width:1281px) {  }
+
 
 
 
