--- a/MiPaginaWeb(Proyecto)/Misaficiones.css
+++ b/MiPaginaWeb(Proyecto)/Misaficiones.css
@@ -82,7 +82,7 @@ section.Contenido {
 }
 
 /*PIE DE PÁGINA*/
- #footer {
+ #footer p {
       background-color: #292C44;
       position: static;
       display: inline-block;
