--- a/MiPaginaWeb(Proyecto)/Misaficiones.css
+++ b/MiPaginaWeb(Proyecto)/Misaficiones.css
@@ -82,13 +82,12 @@ section.Contenido {
 }
 
 /*PIE DE PÁGINA*/
- #footer p {
+ #footer {
       background-color: #292C44;
       position: static;
       display: inline-block;
       bottom: 0;
       width: 100%;
-      height: 40px;
       color: white;
     }   
 /*IMPORTANTE PARA QUE SE ADAPTE*/
@@ -141,3 +140,12 @@ section.Contenido {
     border: black 1px solid;
 }
 
+/Moviles/
+@media (min-width:320px)  {  }
+@media (min-width:481px)  {  }
+/Tablets/
+@media (min-width:641px)  {  }
+@media (min-width:961px)  {  }
+/Ordenadores/
+@media (min-width:1025px) {  }
+@media (min-width:1281px) {  }
