--- a/MiPaginaWeb(Proyecto)/Tutoriales.css
+++ b/MiPaginaWeb(Proyecto)/Tutoriales.css
@@ -9,7 +9,7 @@
               }
  
 /*Tamaño y opciones de la cabecera*/
-    #header {
+       #header {
     position: fixed;
     top: 0;
     width: 100%;
@@ -18,6 +18,7 @@
     font-size: 20px;
     color: #FFFFFF;
         z-index: 10;
+}
 }
  
     #content {
@@ -79,107 +80,24 @@ nav ul li:hover {
     
 /*Contenido debajo del menu principal*/
 section.Contenido {
-    padding-top: 60px
+    padding-top: 60px;
+}
+div h1 {
+    padding-top: 55px;
 }
 
+
 /*pie de pagina */
-#footer {
+ #footer {
       background-color: #292C44;
       position: static;
       display: inline-block;
       bottom: 0;
       width: 100%;
       color: white;
-    }   
-
-section {
-    text-align: center;
-}
-
-
-
-
-
-/*SLIDER*/
-body{
-  background-color: deepskyblue;
-  font-family: sans-serif;
-}
-
-.container{
-  margin: auto;
-  background-color: #F37E7E;
-  width: 800px;
-  padding: 30px;
-}
-
-ul, li {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    animation: cambio 1s infinite alternate linear;
-}
-
-ul.slider{
-  position: relative;
-  width: 800px;
-  height: 300px;
-}
-
-/*IMAGEN 3*/
-ul.slider li {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    opacity: 0;
-    width: inherit;
-    height: inherit;
-    transition: opacity .2s;
-    background: red;
-}
-
-ul.slider li img{
-  width: 100%;
-  height: 300px;
-  object-fit: cover;
-}
-
-ul.slider li:first-child {
-    opacity: 1; /*Mostramos el primer <li>*/
-}
-
-ul.slider li:target {
-    opacity: 1; /*Mostramos el <li> del enlace que pulsemos*/
-}
-
-.menu{
-  text-align: center;
-  margin: 20px;
-}
-
-.menu li{
-  display: inline-block;
-  text-align: center;
-}
-
-/*BOTONES 1,2 y 3 CONF*/
-.menu li a{
-  display: inline-block;
-  color: white;
-  text-decoration: none;
-  background-color: skyblue;
-  padding: 10px;
-  width: 20px;
-  height: 20px;
-  font-size: 20px;
-  border-radius: 100%;
-}
-
-/*IMPORTANTE PARA QUE SE ADAPTE*/
-@media (max-width: 738px){
-    section.Contenido {
-        padding-top: 120px;
-    }
+    }  
+div h3 {
+   padding-top: 60px;
 }
 
 /Moviles/
@@ -194,10 +112,3 @@ ul.slider li:target {
 
 
 
-
-
-
-
-
-
-    
