--- a/MiPaginaWeb(Proyecto)/Miestilo.css
+++ b/MiPaginaWeb(Proyecto)/Miestilo.css
@@ -109,8 +109,8 @@ body{
 .container{
   margin: auto;
   background-color: #F37E7E;
-  width: 800px;
-  padding: 30px;
+  width: 100%;
+  
 }
 
 ul, li {
@@ -122,7 +122,7 @@ ul, li {
 
 ul.slider{
   position: relative;
-  width: 800px;
+  width: 100%;
   height: 300px;
 }
 
